--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
                 <a class="access_button 2" href="#">See Project</a>
             </div>
             <div class="second_card third">
-                <h3>Awesome Books</h3>
-                <h4>Awesome Books </h4>
-                <p>A basic app that saves information of books added by title and author. Allows to delete books from the list.</p>
+                <h3>Finantial Metrics</h3>
+                <h4>Finantial Metrics app</h4>
+                <p>The application displays the last years financial records from the most important companies in the word.</p>
                 <ul class="languages">
-                    <li><a href="#">html</a>
-                    <li><a href="#">bootstrap</a>
-                    <li><a href="#">Ruby</a>
+                    <li><a href="#">React</a>
+                    <li><a href="#">Redux</a>
+                    <li><a href="#">CSS</a>
                 </ul>
                 <a class="access_button 3" href="#">See Project</a>
             </div>
             <div class="second_card fourth">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <h3>Budget app</h3>
+                <p>A mobile app built with rails and PostgreSQL.</p>
                 <ul class="languages">
-                    <li><a href="#">html</a>
-                    <li><a href="#">bootstrap</a>
+                    <li><a href="#">Rails</a>
+                    <li><a href="#">PostgreSQL</a>
                     <li><a href="#">Ruby</a>
                 </ul>
                 <a class="access_button 4" href="#">See Project</a>
